<resources>
    <string name="app_name">ToDoList</string>
    <string name="edit_hint">Adicione uma nova tarefa</string>
    <string name="tasks_created">Criadas</string>
    <string name="tasks_created_value">0</string>
    <string name="completed_tasks">Concluídas</string>
    <string name="completed_tasks_value">0</string>
    <string name="empty_list_title">Você ainda não tem tarefas cadastradas</string>
    <string name="empty_list_subtitle">Crie tarefas e organize seus itens a fazer</string>
    <string name="task_description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</string>
</resources>