<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_600"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="0dp"
        android:layout_height="173dp"
        android:background="@color/gray_700"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_new_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-32dp"
        android:background="@drawable/rounded_corner_edit"
        android:fontFamily="@font/inter"
        android:hint="@string/edit_hint"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/gray_100"
        android:textColorHint="@color/gray_300"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/image_button_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_header" />

    <ImageButton
        android:id="@+id/image_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corner_add_button"
        android:padding="18dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_new_task"
        app:layout_constraintTop_toTopOf="@id/edit_new_task"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/text_tasks_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tasks_created"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_new_task" />

    <TextView
        android:id="@+id/text_tasks_created_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_text_value"
        android:fontFamily="@font/inter_bold"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:text="@string/tasks_created_value"
        android:textColor="@color/gray_200"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/text_tasks_created"
        app:layout_constraintTop_toTopOf="@id/text_tasks_created" />

    <TextView
        android:id="@+id/text_completed_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/completed_tasks"
        android:textColor="@color/purple"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/text_completed_tasks_value"
        app:layout_constraintTop_toTopOf="@id/text_tasks_created" />

    <TextView
        android:id="@+id/text_completed_tasks_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_text_value"
        android:fontFamily="@font/inter_bold"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:text="@string/completed_tasks_value"
        android:textColor="@color/gray_200"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_completed_tasks" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tasks_created" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="24dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider"
        tools:listitem="@layout/task" />

    <include
        android:id="@+id/empty_container"
        layout="@layout/empty_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>